# rust-proyecto-final

./: .gitignore  Readme.md  TODO.md  lib.rs
reportes/: Cargo.toml  lib.rs
reportes/votacion/: Cargo.toml  lib.rs
votacion/: Cargo.toml  lib.rs
votacion/src/coverage/: tarpaulin-report.html
