[package]
name = "reportes"
version = "0.1.0"
authors = ["Vicente García Martí, Maria Luisa Britez, Julia Lunazzi, Juan Cruz Pissaco"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
votacion = { path = "../votacion", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "votacion/std",
]
ink-as-dependency = []
e2e-tests = []
